test/libsolidity/syntaxTests/types/mapping/library_mapping.sol
library L {}
contract C { mapping(L => bool) i; }
// ----
// TypeError: (34-35): Library types cannot be used as mapping keys.
